# CrackedInfo---TailorTalk

./: .gitignore  README.md  main.py  pyproject.toml
backend/: README.md  pyproject.toml  streamlit_app.py  test_agent_local.py
backend/app/: main.py
backend/app/agents/: agent.py  base_agent.py  drive_search_tool.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/app/services/: google_drive.py  query_builder.py  search_engine.py
backend/tests/: test_drive.py
