[project]
name = "crackedinfo"
version = "0.1.0"
description = "tailortalk assignment"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "alembic>=1.18.4",
    "deepagents>=0.6.1",
    "fastapi[standard]>=0.136.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "streamlit>=1.57.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
