[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.2",
    "fastapi>=0.136.1",
    "google>=3.0.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-groq>=1.1.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.49.0",
    "uvicorn>=0.46.0",
]
